Name:               mescaline
Version:            0.0.1
Synopsis:           Mescaline is a data-driven sequencer and synthesizer.
Description:        Mescaline is a data-driven sequencer and synthesizer.
Category:           Sound
License:            GPL-3
License-File:		COPYING
Author:             puesnada.es
Copyright:          (c) 2009-2011 puesnada.es
Maintainer:         mescaline@puesnada.es
Homepage:           http://mescaline.puesnada.es
Bug-Reports:        https://github.com/kaoskorobase/mescaline/issues
Cabal-Version:      >= 1.2
Build-Type:         Simple

Extra-Source-Files:
    include/Accessor.h

Flag analysis
    Description: Include analysis code
    Default: True

library
    ghc-options:    -W
    include-dirs:   include
    build-depends:
        base >= 4 && < 5
      , aeson >= 0.2
      , attoparsec
      , bitset >= 1.0
      , array >= 0.2
      -- , arrows
      , bytestring
      , Cabal >= 1.6
      -- , CCA >= 0.1.3 && < 0.2
      , containers
      , ConfigFile >= 1.0
      , data-accessor >= 0.2
      , data-accessor-mtl >= 0.2.0.2
      , data-ivar >= 0.30
      , deepseq >= 1.1
      , directory
      , dlist
      , failure
      , filepath
      , FindBin >= 0.0
      , fingertree
      -- , hmeap >= 0.8
      , hosc >= 0.8
      , hslogger >= 1.1
      , hsc3 >= 0.8
      , hsc3-lang >= 0.9
      , hsc3-process >= 0.6
      , hsc3-server >= 0.3
      , mescaline-database >= 0.0 && < 0.1
      , monad-control
      , MonadCatchIO-mtl >= 0.3
      , MonadRandom >= 0.1
      , mtl >= 2
      , old-time
      , parallel >= 3
      , persistent >= 0.5
      , process >= 1.0
      , random >= 1.0
      , text
      , transformers
      -- , uuid >= 1.0
      , vector >= 0.5
    exposed-modules:
        -- Control.CCA.ArrowP
        Control.Concurrent.Chan.Chunked
        Control.Concurrent.MVar.StrictModify
        Control.Concurrent.Process
        Data.Aeson.Config
        Data.KDTree
        Data.ProbabilisticSuffixTree.Context
        Data.ProbabilisticSuffixTree
        -- Data.Signal.SF
        -- Data.Signal.SF.Base
        -- Data.Signal.SF.Event
        Mescaline
        Mescaline.Application
        Mescaline.Application.Config
        Mescaline.Application.Config.Type
        Mescaline.Application.Desktop
        Mescaline.Application.Logger
        Mescaline.Data.ByteString
        Mescaline.Data.PriorityQueue
        -- Mescaline.Data.Unique
        Mescaline.Database.Process
        Mescaline.FeatureSpace.Model
        Mescaline.FeatureSpace.Process
        Mescaline.FeatureSpace.Unit
        Mescaline.Hugs
        Mescaline.Math
        Mescaline.Pattern
        Mescaline.Pattern.AST
        Mescaline.Pattern.AST.Library
        Mescaline.Pattern.Base
        Mescaline.Pattern.Binding
        Mescaline.Pattern.Compiler
        Mescaline.Pattern.Environment
        Mescaline.Pattern.Event
        Mescaline.Pattern.Interpreter
        Mescaline.Pattern.Library
        Mescaline.Pattern.Patch
        Mescaline.Pattern.Patch.Default
        Mescaline.Pattern.Patch.Version_0_0_1
        Mescaline.Pattern.Ppar
        Mescaline.Pattern.Player
        Mescaline.Pattern.Process
        Mescaline.Pattern.Sequencer
        Mescaline.Synth.BufferCache
        Mescaline.Synth.BufferCache.Alloc
        Mescaline.Synth.BufferCache.Server
        Mescaline.Synth.OSCServer
        Mescaline.Synth.Sampler.Model
        Mescaline.Synth.Sampler.Process
        -- Mescaline.Synth.SSF
        -- Mescaline.Synth.SSF.BufferCache
        -- Mescaline.Synth.SSF.DiskSampler
        Mescaline.Time
    if flag(analysis)
        CPP-Options: -DUSE_ANALYSIS=1

    other-modules:
        Paths_mescaline
